# Game_club

./: .gitignore  .~lock.Тестовое задание С++.docx#  CMakeLists.txt  Client.cpp  Client.h  ClientsBase.cpp  ClientsBase.h  Event.cpp  Event.h  GamerClubEnv.cpp  GamerClubEnv.h  ParserConsole.cpp  ParserConsole.h  ParserConsoleException.cpp  ParserConsoleException.h  ParserFile.cpp  ParserFile.h  ParserFileError.cpp  ParserFileError.h  Table.cpp  Table.h  TableInterval.cpp  TableInterval.h  TimeStamp.cpp  TimeStamp.h  input1.txt  main.cpp  readme.md
Events/: BaseEvent.cpp  BaseEvent.h  ClientCameEvent.cpp  ClientCameEvent.h  ClientGoneEvent.cpp  ClientGoneEvent.h  ClientSatEvent.cpp  ClientSatEvent.h  ClientWaitingEvent.cpp  ClientWaitingEvent.h  ErrorEvent.cpp  ErrorEvent.h  EventsFactory.cpp  EventsFactory.h  NameRequiredEvent.cpp  NameRequiredEvent.h  NameTableRequiredEvent.cpp  NameTableRequiredEvent.h
test/: CMakeLists.txt  environment_test.cpp  input10.txt  input11.txt  input12.txt  input13.txt  input14.txt  input15.txt  input16.txt  input2.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt  input8.txt  input9.txt  input_test.cpp  parser_test.cpp  timestamp_test.cpp  try_test.cpp
